# pyxmenu

./: README.md  pyproject.toml  setup.py
pyargos/: argos_icon_object.py  argos_object.py  consts.py
pyargos/action/: __init__.py  argos_action.py  bash_action.py  eval_action.py  href_action.py  refresh_action.py
pyargos/item/: __init__.py  argos_item.py  argos_menu.py  argos_plugin.py  argos_section.py  argos_seperator.py
pyargos/item/icon/: __init__.py  argos_icon.py  argos_image_icon.py
pyargos/utils/: format.py  remote.py
src/pyxmenu/: __init__.py
src/pyxmenu/item/: __init__.py  divider.py
src/pyxmenu/item/attribute/: __base__.py  __init__.py  alternative.py  ansi.py  color.py  disabled.py  dropdown.py  emojize.py  font.py  href.py  image.py  key.py  length.py  parmas.py  refresh.py  shell.py  size.py  template_image.py  terminal.py  trim.py
src/pyxmenu/plugin/: __init__.py
src/pyxmenu/section/: __init__.py
