[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyxmenu"
version = "0.0.1"
authors = [
    { name = "Hadar Gotshal", email = "gohadar@gmail.com" },
    { name = "Dor Genosar", email = "dor.genosar@outlook.com" },
]
maintainers = [
    { name = "Hadar Gotshal", email = "gohadar@gmail.com" },
    { name = "Dor Genosar", email = "dor.genosar@outlook.com" },
]
description = "A python utility for creating xbar, argos and ardos menus."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.7"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/labrador-team/pyxmenu"